<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvContacto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="@dimen/corner_redius_cardview">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
            <ImageView
                android:id="@+id/imgFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            
            <!--<ImageButton
                android:id="@+id/btnLike"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/thumb_up_48"
                android:layout_alignParentLeft="true"/>-->
            
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tvNombreCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pNombre"
                    android:textSize="@dimen/nombre_cardview"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvTelefonoCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pTelefono"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pLikes"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="20dp"
                />

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>