<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adelfo.miscontactos.MainActivity">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        ></include>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_acerca_de"
                android:textSize="@dimen/enviar_email_size"
                android:layout_marginTop="@dimen/nombre_app_margin_top"
                android:layout_marginRight="@dimen/et_horizontal_margin"
                android:layout_marginLeft="@dimen/et_horizontal_margin"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_acerca_de_petagram"
                android:textSize="@dimen/enviar_email_size"
                android:layout_marginTop="20dp"
                android:layout_marginRight="@dimen/et_horizontal_margin"
                android:layout_marginLeft="@dimen/et_horizontal_margin"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_version"
                android:textSize="@dimen/enviar_email_size"
                android:layout_marginTop="@dimen/nombre_app_margin_top"
                android:layout_marginRight="@dimen/et_horizontal_margin"
                android:layout_marginLeft="@dimen/et_horizontal_margin"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_version2"
                android:textSize="@dimen/enviar_email_size"
                android:layout_marginTop="@dimen/nombre_app_margin_top"
                android:layout_marginRight="@dimen/et_horizontal_margin"
                android:layout_marginLeft="@dimen/et_horizontal_margin"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>