<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adelfo.miscontactos.MainActivity">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        ></include>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/nombre_app_text_size"
            android:layout_marginTop="@dimen/nombre_app_margin_top"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/etAgregarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/introducir_usuario_text_size"
            android:layout_marginTop="@dimen/nombre_app_margin_top"
            android:layout_marginRight="@dimen/et_horizontal_margin"
            android:layout_marginLeft="@dimen/et_horizontal_margin"
            android:hint="@string/escribir_usuario"/>

        <Button
            android:id="@+id/btnGuardarCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/guardar_usuario"
            android:layout_marginTop="@dimen/nombre_app_margin_top"
            android:layout_marginRight="@dimen/et_horizontal_margin"
            android:layout_marginLeft="@dimen/et_horizontal_margin"
            android:theme="@style/miBotonRaised"
            android:text="@string/guardar_cuenta"
            android:onClick="guardarUsuarioPetagram"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>


